ECMS-5461 Drag&Drop UI looks not beautiful Problem analysis:   In Content Explorer, while user drags and drops nodes, there are some bugs:    1. In Webview and Iconview, target node is not highlighted    2. In container of moved node, all icons are in vertical line    3. The container of moved node is too big. Expectation Solution:    1 ->  Highlight the target node    2 ->  Icons should be in horizontal line    3 ->  Reduce the size of this container

--- a/apps/portlet-explorer/src/main/webapp/skin/less/UIFileView/Style.less
+++ b/apps/portlet-explorer/src/main/webapp/skin/less/UIFileView/Style.less
@@ -270,3 +270,7 @@
 		}
 	}
 }
+
+.MoveItem {
+	padding: 0px;
+}
